--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -16,7 +16,7 @@
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">码匠社区</span>
             </button>
-            <a class="navbar-brand" href="#">码匠社区</a>
+            <a class="navbar-brand" href="/">码匠社区</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <form class="navbar-form navbar-left">
@@ -48,7 +48,7 @@
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true" style="margin: 5px;"></span>发布</h2>
+            <h2><span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true" style="margin: 5px;"></span>  发布</h2>
             <hr>
             <form action="/publish" method="post">
                 <div class="form-group">
