--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -63,11 +63,22 @@
                     <label for="title">添加标签：</label>
                     <input type="text" class="form-control" id="tag" name="tag" th:value="${tag}" placeholder="输入标签，以,号隔开">
                 </div>
+<!--                <div class="container-fluid main">-->
+<!--                    <div class="row">-->
+<!--                        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">-->
+<!--                            <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12"-->
+<!--                                 th:text="${error}" th:if="${error != null}">-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">-->
+<!--                            <button type="submit" class="btn btn-success btn-publish">发布</button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
                 <span class="alert-danger" th:text="${error}"></span>
                 <button type="submit" class="btn btn-success btn-publish">发布</button>
             </form>
         </div>
-
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <h3>问题发起指南</h3>
             · 问题标签：请用精简的语言描述您发布的问题，不超过25字<br>
