--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -28,8 +28,9 @@
             </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div>
-                <a th:href="@{'/publish/'+${question.id}}" class="community-menu">
-                    <span class="glyphicon glyphicon-pencil " aria-hidden="true"></span>编辑
+                <a th:href="@{'/publish/'+${question.id}}" class="community-menu" th:if="${session.user != null && session.user.id == question.creator}">
+                    <span class="glyphicon glyphicon-pencil " aria-hidden="true">
+                    </span>编辑
                 </a>
             </div>
 
