--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -7,6 +7,34 @@ body {
     margin: 30px;
 }
 
+.side {
+    margin: 5px 0;
+}
+
+.top-header {
+    padding-left: 20px;
+}
+
+.community-tag:hover {
+    background-color: #339dff;
+    color: #fff !important;
+    text-decoration-line: none;
+}
+
+.community-tag {
+    text-decoration-line: none;
+    cursor: pointer;
+    display: inline-block;
+    height: 20px;
+    line-height: 16px;
+    padding: 2px 5px;
+    background-color: #99cfff;
+    font-size: 12px;
+    color: #fff !important;
+    border-radius: 4px;
+    margin: 4px;
+}
+
 .btn-publish {
     float: right;
     margin-bottom: 15px;
@@ -14,7 +42,7 @@ body {
 
 .media-object {
     width: 38px;
-    height: 38px
+    height: 38px;
 }
 
 .media-body {
@@ -27,19 +55,50 @@ body {
     color: #999;
 }
 
-.profile-section {
+.profile .section {
     margin-top: 15px;
 }
 
+.question-title {
+    margin-top: 25px;
+}
+
+.question-tag {
+    margin-right: 5px;
+}
+
+.question-related {
+    line-height: 20px;
+    font-size: 12px;
+    margin-left: 0;
+    list-style: none;
+    padding-left: 0;
+}
+
+.question-wechat {
+    width: 95%;
+}
+
+.publish-tag-tab {
+    display: none;
+    margin-top: 10px;
+    padding-top: 10px;
+}
+
+.publish-tag-tab .label-info {
+    white-space: normal;
+    margin: 5px 5px;
+    display: inline-block;
+}
+
 .community-menu {
-    display: block;
-    color: #999999;
+    color: #999;
     font-size: 13px;
     margin-bottom: 15px;
 }
 
-.community-menu:hover {
-    color: #499ef3;
+.jumbotron {
+    margin: 50px;
 }
 
 .comment {
@@ -52,9 +111,21 @@ body {
 }
 
 .comments {
-    margin-bottom: 15px;
     padding-bottom: 5px;
+    margin-bottom: 15px;
     border-bottom: 1px solid #eee;
+}
+
+.sub-comments {
+    border-radius: 5px;
+    margin-top: 10px;
+    border: 1px solid #eee;
+    padding-top: 15px;
+    margin-bottom: 15px;
+}
+
+.sub-comments .btn {
+    margin: 10px 0;
 }
 
 .comment-sp {
@@ -72,10 +143,30 @@ body {
     cursor: pointer;
 }
 
+.menu .comment-icon {
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.menu .comment-icon :hover {
+    color: #499ef3;
+}
+
+.menu .active {
+    color: #499ef3;
+}
+
 .menu .icon:hover {
     color: #499ef3;
 }
 
-.question-title {
-    margin-top: 25px;
+.footer {
+    text-align: center;
+    font-size: 12px;
+    color: #666;;
+    padding: 0 0 15px 0;
+}
+
+.red {
+    color: red !important;
 }
