--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -52,6 +52,7 @@
 
             <!--回复-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>
                     <span th:text="${question.commentCount}"></span> 个回复
                 </h4>
