--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -22,13 +22,13 @@
                     <li th:if="${session.user != null}">
                         <a href="/publish">提问</a>
                     </li>
-                    <li >
-                        <a href="/profile/replies">通知<span class="badge">42</span></a>
+                    <li>
+                        <a href="/profile/replies">通知 <span class="badge" th:text="${session.unreadCount}"></span></a>
                     </li>
                     <li class="dropdown" th:if="${session.user != null}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">
-                            <span  th:text="${session.user.getName()}"></span>
+                            <span th:text="${session.user.getName()}"></span>
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
